organização das imagens

--- a/index.html
+++ b/index.html
@@ -34,24 +34,25 @@
 
     <div class="images">
 
-        <img src="presente.png" alt="imagem ilustrativa de uma caixa de presente">
+        <img src="img/presente.png" alt="imagem ilustrativa de uma caixa de presente">
         <p>Presentes</p>
         <h3>Eles são os melhores presentes que existem.</h3>
 
-        <img src="sino.png" alt="imagem ilustrativa de um sino de natal">
+        <img src="img/sino.png" alt="imagem ilustrativa de um sino de natal">
         <p>Enfeites</p>
         <h3>Dê uma decoração.</h3>
 
-        <img src="s.png" alt="imagem ilustrativa de um">
+        <img src="img/s.png" alt="imagem ilustrativa de um">
         <p>Doces</p>
         <h3>Aproveite os doces natalinos.</h3>
 
-        <img src="meia.png" alt="imagem ilustrativa de uma meia de natal">
+        <img src="img/meia.png" alt="imagem ilustrativa de uma meia de natal">
         <p>Muito amor</p>
         <h3>Aproveite os sentimentos que duram para sempre.</h3>
     </div>
 
     <div class="section">
+        <img src="img/maos.png" alt="foto ilustrativa das mãos segurando um presente">
         <h1>Comemore com muito amor!</h1>
         <h3>Nestes feriados, festeje com muito amor e paz, oferecendo muitas bênçãos aos nossos entes queridos, amigos e vizinhos, desejando-lhes um Feliz Natal.</h3>
         <button>Fazer doação</button>
