--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feliz Natal</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="header">
+        <img src="img/papai_noel_pequeno.png" alt="papai noel">
         <h1>Feliz Natal</h1>
         <ul>
             <li>Início</li>
@@ -20,9 +22,10 @@
 <main>
 
     <div class="first_section">
-        <h1>Feliz Natal e Feliz Ano Novo!</h1>
+        <img src="img/first.png" alt="foto ilustrativa da mão do papai noel entregando um presente">
+        <h1>Feliz Ano Novo!</h1>
+             <h1>Feliz Natal e </h1>
         <h3>Nessas festas de fim de ano mande um presente para a pessoa amada e compartilhe a alegria do Natal.</h3>
-        <img src="first.png" alt="foto ilustrativa da mão do papai noel entregando um presente">
         <button>Fazer uma doação</button>
 
     </div>
