--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/1ab94d0eba.js" crossorigin="anonymous"></script>
     <title>Feliz Natal</title>
     <link rel="stylesheet" href="style.css">
+    
 </head>
 
 <body>
@@ -23,11 +25,10 @@
 
     <div class="first_section">
         <img src="img/first.png" alt="foto ilustrativa da mão do papai noel entregando um presente">
-        <h1>Feliz Ano Novo!</h1>
-             <h1>Feliz Natal e </h1>
+       <h1>Feliz Natal e Feliz Ano Novo!</h1>
         <h3>Nessas festas de fim de ano mande um presente para a pessoa amada e compartilhe a alegria do Natal.</h3>
-        <button>Fazer uma doação</button>
-
+        <button class="first_button_doacao">Fazer uma doação</button>
+        
     </div>
 
     <div class="secund_section">
