--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
         </div>
     </div>
 
-    <div class="section">
-        <img src="img/maos.png" alt="foto ilustrativa das mãos segurando um presente">
+    <div class="three_section">
+        <img src="img/mmaos.png" alt="foto ilustrativa das mãos segurando um presente">
         <h1>Comemore com muito amor!</h1>
         <h3>Nestes feriados, festeje com muito amor e paz, oferecendo muitas bênçãos aos nossos entes queridos, amigos e vizinhos, desejando-lhes um Feliz Natal.</h3>
-        <button>Fazer doação</button>
+        <button class="second_button_doacao">Fazer doação</button>
     </div>
 </main>
     <footer>
