efeito de neve caindo

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     
 </head>
 
+<div class="neve">
+    <div class="snowflakes" aria-hidden="true">
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+      </div>
+</div>
+
 <body>
     <div class="header">
         <img src="img/papai_noel_pequeno.png" alt="papai noel">
@@ -75,5 +83,6 @@
         <h3>Feliz Natal</h3>
         
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
