--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <div class="header">
-        <img src="img/papai_noel_pequeno.png" alt="papai noel">
+        <img class="imagem_papai_noel" src="img/papai_noel_pequeno.png" alt="papai noel">
         <h1>Feliz Natal</h1>
         <ul>
             <li>Início</li>
@@ -36,7 +36,7 @@
        <h1>Feliz Natal e Feliz Ano Novo!</h1>
         <h3>Nessas festas de fim de ano mande um presente para a pessoa amada e compartilhe a alegria do Natal.</h3>
         <button class="first_button_doacao">Fazer uma doação</button>
-        
+        <!-- <img class="ramo" src="img/ramo.png" alt="ramo de flor"> -->
     </div>
 
     <div class="secund_section">
@@ -80,8 +80,20 @@
     </div>
 </main>
     <footer>
+        <img class="papei_noel_pequeno" src="img/papai_noel_pequeno.png" alt="papai noel">
         <h3>Feliz Natal</h3>
-        
+        <div arial-label="seção apenas de ilustrações de botões" class="circle">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+        <!-- <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div> -->
     </footer>
     <script src="script.js"></script>
 </body>
