--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <img src="img/mmaos.png" alt="foto ilustrativa das mãos segurando um presente">
         <h1>Comemore com muito amor!</h1>
         <h3>Nestes feriados, festeje com muito amor e paz, oferecendo muitas bênçãos aos nossos entes queridos, amigos e vizinhos, desejando-lhes um Feliz Natal.</h3>
-        <button class="second_button_doacao">Fazer doação</button>
+        <button class="second_button_doacao"><i class="fa-solid fa-gift"></i>Fazer doação</button>
     </div>
 </main>
     <footer arial-label="seção do rodapé">
@@ -92,9 +92,14 @@
           </div>
 
           <div class="icons" arial-label="seção de icones das redes sociais">
-            <i class="fa-brands fa-github"></i>
-            <i class="fa-brands fa-linkedin-in"></i>
-            <i class="fa-regular fa-envelope"></i>
+            <span>
+
+                <i class="fa-brands fa-x-twitter" ></i>
+                <i class="fa-brands fa-youtube youtube"></i>
+                <i class="fa-brands fa-linkedin-in linkedin"></i>
+                <i class="fa-brands fa-instagram instagram"></i>
+                <i class="fa-brands fa-facebook-f facebook"></i>
+            </span>
             
             
           </div>
