--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <img class="images" src="img/presentee.png" alt="imagem ilustrativa de uma caixa de presente">
          
-        <img class="images" src="img/sinoo.png" alt="imagem ilustrativa de um sino de natal">
+        <img class="images" src="img/sino.png" alt="imagem ilustrativa de um sino de natal">
 
         <img class="images" src="img/doce.png"  alt="imagem ilustrativa de um doce">
 
@@ -74,7 +74,7 @@
     </div>
 
     <div class="three_section" arial-label="seção de doação">
-        <img src="img/mmaos.png" alt="foto ilustrativa das mãos segurando um presente">
+        <img src="img/maos.png" alt="foto ilustrativa das mãos segurando um presente">
         <h1>Comemore com muito amor!</h1>
         <h3>Nestes feriados, festeje com muito amor e paz, oferecendo muitas bênçãos aos nossos entes queridos, amigos e vizinhos, desejando-lhes um Feliz Natal.</h3>
         <button class="second_button_doacao"><i class="fa-solid fa-gift"></i>Fazer doação</button>
