--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <li>Doação</li>
             <li>Contato</li>
         </ul>
+        <i class="fa-solid fa-bars menu"></i>
     </div>
 
 <main>
