adição do scroll

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 </div>
 
 <body>
-    <div class="header" arial-label="seção menu da página">
+    <div class="header" arial-label="seção menu da página" id="inicio" >
         <img class="imagem_papai_noel" src="img/papai_noel_pequeno.png" alt="papai noel">
         <h1>Feliz Natal</h1>
         <ul>
-            <li>Início</li>
-            <li>Acessório</li>
-            <li>Doação</li>
-            <li>Contato</li>
+            <li><a href="#inicio">Início</a></li>
+            <li><a href="#acessorio">Acessório</a></li>
+            <li><a href="#doacao">Doação</a></li>
+            <li><a href="#contato">Contato</a></li>
         </ul>
         <i class="fa-solid fa-bars menu"></i>
     </div>
@@ -39,7 +39,7 @@
         <button class="first_button_doacao"><i class="fa-solid fa-gift"></i> Fazer uma doação</button>
     </div>
 
-    <div class="secund_section" arial-label="seção de acessórios">
+    <div class="secund_section" id="acessorio" arial-label="seção de acessórios">
         <h1>Acessórios</h1>
         <h3>Nessas festas de fim de ano mande um presente para a pessoa amada e compartilhe a alegria do Natal.</h3>
     </div>
@@ -66,7 +66,7 @@
         </div>
     </div>
 
-    <div class="three_section" arial-label="seção de doação">
+    <div class="three_section" id="doacao" arial-label="seção de doação" >
         <img src="img/maos.png" alt="foto ilustrativa das mãos segurando um presente">
         <h1>Comemore com muito amor!</h1>
         <h3>Nestes feriados, festeje com muito amor e paz, oferecendo muitas bênçãos aos nossos entes queridos, amigos e vizinhos, desejando-lhes um Feliz Natal.</h3>
@@ -74,7 +74,7 @@
     </div>
 </main>
 
-    <footer arial-label="seção do rodapé">
+    <footer arial-label="seção do rodapé" id="contato">
         <img class="papei_noel_pequeno" src="img/papai_noel_pequeno.png" alt="papai noel">
         <h3>Feliz Natal</h3>
         <div arial-label="seção apenas de ilustrações de botões" class="circle">
